--- a/app/src/main/res/layout/prompt_create_account.xml
+++ b/app/src/main/res/layout/prompt_create_account.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,21 +11,26 @@
     android:layout_height="wrap_content"
     android:padding="16dp"
     android:layout_centerInParent="true"
-    android:background="#000000">
+    android:background="@color/primary">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
+        android:textColor="@color/text_primary_light"
         android:text="@string/create_account_prompt"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxWidth="300dp"
         android:layout_marginTop="8dp"
+        android:textColor="@color/text_primary_light"
         android:text="@string/account_explanation"/>
     <CheckBox android:id="@+id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/text_primary_light"
+        app:buttonTint="@color/text_primary_light"
+        android:buttonTint="@color/text_primary_light"
         android:text="@string/dont_show_again"/>
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,11 +41,15 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:background="@drawable/rounded_corner_accent"
             android:text="@string/yes"/>
         <Button android:id="@+id/no_button"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corner_primary_dark"
             android:text="@string/no_thanks"/>
     </LinearLayout>
 </LinearLayout>
