--- a/app/src/main/res/layout/sample_pack_file_list_item.xml
+++ b/app/src/main/res/layout/sample_pack_file_list_item.xml
@@ -1,11 +1,35 @@
-<?xml version="1.0" encoding="utf-8"?>
-<TextView android:id="@+id/textView"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_sound_wave_icon_green"
-        android:drawableLeft="@drawable/ic_sound_wave_icon_green"
-        android:drawablePadding="8dp"
-        android:gravity="center_vertical"
-        android:text="File name"
-    android:textColor="@color/text_primary_light"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/wave_icon"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/ic_sound_wave_icon_green"/>
+    <ImageView
+        android:id="@+id/pause_icon"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/list_item_play_selector"/>
+    <ImageView
+        android:id="@+id/item_edit_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/edit_icon_selector"
+        android:duplicateParentState="true"/>
+        <TextView
+            android:id="@+id/sample_file_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:layout_toEndOf="@+id/wave_icon"
+            android:layout_toRightOf="@+id/wave_icon"
+            android:layout_toLeftOf="@id/item_edit_icon"
+            android:layout_toStartOf="@id/item_edit_icon"
+            android:text="sample file name"
+            android:textColor="@color/text_primary_light"/>
+</RelativeLayout>
