--- a/app/src/main/res/drawable/popup_background.xml
+++ b/app/src/main/res/drawable/popup_background.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#CC000000" />
-    <stroke android:width="2dp"
-        android:color="#888888" />
+    <solid android:color="@color/primary" />
     <corners android:radius="6dp" />
     <padding android:bottom="6dp"
         android:top="6dp"
