--- a/app/src/main/res/layout/activity_launch_pad.xml
+++ b/app/src/main/res/layout/activity_launch_pad.xml
@@ -569,7 +569,7 @@
         android:orientation="vertical"
         android:gravity="center"
         android:layout_centerVertical="true"
-        android:background="@color/primary_dark"
+        android:background="@drawable/rounded_corner_2dp_primary"
         android:translationX="-44dp"
         android:visibility="visible">
         <ImageButton android:id="@+id/action_edit_sample"
