--- a/app/src/main/res/layout/activity_sample_edit.xml
+++ b/app/src/main/res/layout/activity_sample_edit.xml
@@ -1,8 +1,14 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/primary_dark">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1"
     android:id="@+id/rootLayout"
     tools:context=".SampleEditActivity">
     <android.support.v7.widget.Toolbar
@@ -11,7 +17,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
+        android:theme="@style/ActionBarTheme"/>
 
 
     <com.nakedape.mixmaticlooppad.AudioSampleView
@@ -30,7 +36,7 @@
         android:orientation="vertical"
         android:gravity="center"
         android:layout_centerVertical="true"
-        android:background="@color/primary"
+        android:background="@drawable/rounded_corner_2dp_primary"
         android:translationX="0dp"
         android:visibility="visible"> <!-- -44dp -->
         <ImageButton android:id="@+id/action_select"
@@ -97,3 +103,12 @@
         android:onClick="RecordButtonClick"/>
 
 </RelativeLayout>
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="@string/sample_edit_banner_ad_id"
+        android:visibility="gone"/>
+</LinearLayout>
