--- a/app/src/main/res/layout/store_sample_pack_item.xml
+++ b/app/src/main/res/layout/store_sample_pack_item.xml
@@ -21,7 +21,9 @@
     android:gravity="center_vertical">
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp">
     <ImageView android:id="@+id/image_view"
         android:layout_width="100dp"
         android:layout_height="100dp"
