Added quantization options and new volume popup

--- a/app/src/main/res/layout-land/activity_launch_pad.xml
+++ b/app/src/main/res/layout-land/activity_launch_pad.xml
@@ -547,36 +547,42 @@
         <ImageButton android:id="@+id/action_edit_sample"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="6dp"
             android:background="@drawable/ic_action_editor_mode_edit"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_loop_mode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="6dp"
             android:background="@drawable/ic_av_loop"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_launch_mode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="6dp"
             android:background="@drawable/ic_keyboard"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_set_volume"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="6dp"
             android:background="@drawable/ic_av_equalizer"
+            android:onClick="toolBarClick"/>
+        <ImageButton android:id="@+id/action_quantize"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:background="@drawable/ic_beat"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_pick_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="6dp"
             android:background="@drawable/ic_palette"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_remove_sample"
             android:layout_width="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="6dp"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_action_delete"
             android:onClick="toolBarClick"/>
