--- a/app/src/main/res/layout/activity_launch_pad.xml
+++ b/app/src/main/res/layout/activity_launch_pad.xml
@@ -575,36 +575,42 @@
         <ImageButton android:id="@+id/action_edit_sample"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="6dp"
             android:background="@drawable/ic_action_editor_mode_edit"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_loop_mode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="6dp"
             android:background="@drawable/ic_av_loop"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_launch_mode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="6dp"
             android:background="@drawable/ic_keyboard"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_set_volume"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="6dp"
             android:background="@drawable/ic_av_equalizer"
+            android:onClick="toolBarClick"/>
+        <ImageButton android:id="@+id/action_quantize"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:background="@drawable/ic_beat"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_pick_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="6dp"
             android:background="@drawable/ic_palette"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_remove_sample"
             android:layout_width="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="6dp"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_action_delete"
             android:onClick="toolBarClick"/>
@@ -627,4 +633,26 @@
         android:clickable="true"
         android:onClick="DoneButtonClick"
         android:translationY="48dp"/>
+    <LinearLayout android:id="@+id/volume_popup"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:background="@color/primary"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_toRightOf="@id/pad_toolbar"
+        android:layout_toEndOf="@id/pad_toolbar"
+        android:visibility="gone">
+        <SeekBar android:id="@+id/volume_slider_view"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:progress="50"
+            android:max="100"/>
+        <TextView android:id="@+id/volume_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_primary_light"
+            android:text="50"/>
+    </LinearLayout>
 </RelativeLayout>
