--- a/app/src/main/res/layout/counter_bar.xml
+++ b/app/src/main/res/layout/counter_bar.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content" android:layout_height="wrap_content">
-    <TextView
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:gravity="center_vertical"
+    android:background="@color/primary">
+    <TextView android:id="@+id/bpm_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/text_primary_light"
+        android:text="120 BPM"/>
+    <TextView android:id="@+id/counter_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/text_primary_light"
-        android:text="120 BPM    00 : 00"
-        android:id="@+id/textViewCounter"
-        android:layout_gravity="center_vertical"
-        android:layout_centerInParent="true"/>
-</RelativeLayout>
+        android:text="00 : 00"/>
+</LinearLayout>
