--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,16 @@
             <!-- backward compatibility -->
         <item name="background">@color/primary</item>
     </style>
+
+    <style name="MyAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <!-- Used for the buttons -->
+        <item name="colorAccent">@color/primary_accent</item>
+        <!-- Used for the title and text -->
+        <item name="android:textColorPrimary">@color/text_primary_light</item>
+        <!-- Used for the background -->
+        <item name="android:background">@color/primary</item>
+    </style>
+
     <style name="ActionBarPopupTheme">
         <item name="android:textColor">@color/text_primary_dark</item>
         <item name="android:background">@color/md_white_1000</item>
