Added color popup

--- a/app/src/main/res/layout/activity_launch_pad.xml
+++ b/app/src/main/res/layout/activity_launch_pad.xml
@@ -573,45 +573,45 @@
         android:translationX="-44dp"
         android:visibility="visible">
         <ImageButton android:id="@+id/action_edit_sample"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/toolbar_icon_size"
+            android:layout_height="@dimen/toolbar_icon_size"
             android:layout_margin="6dp"
             android:background="@drawable/ic_action_editor_mode_edit"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_loop_mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/toolbar_icon_size"
+            android:layout_height="@dimen/toolbar_icon_size"
             android:layout_margin="6dp"
             android:background="@drawable/ic_av_loop"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_launch_mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/toolbar_icon_size"
+            android:layout_height="@dimen/toolbar_icon_size"
             android:layout_margin="6dp"
             android:background="@drawable/ic_keyboard"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_set_volume"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/toolbar_icon_size"
+            android:layout_height="@dimen/toolbar_icon_size"
             android:layout_margin="6dp"
             android:background="@drawable/ic_av_equalizer"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_quantize"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/toolbar_icon_size"
+            android:layout_height="@dimen/toolbar_icon_size"
             android:layout_margin="6dp"
             android:background="@drawable/ic_beat"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_pick_color"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/toolbar_icon_size"
+            android:layout_height="@dimen/toolbar_icon_size"
             android:layout_margin="6dp"
             android:background="@drawable/ic_palette"
             android:onClick="toolBarClick"/>
         <ImageButton android:id="@+id/action_remove_sample"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/toolbar_icon_size"
+            android:layout_height="@dimen/toolbar_icon_size"
             android:layout_margin="6dp"
-            android:layout_height="wrap_content"
             android:background="@drawable/ic_action_delete"
             android:onClick="toolBarClick"/>
     </LinearLayout>
@@ -637,7 +637,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:padding="4dp"
-        android:background="@color/primary"
+        android:background="@drawable/rounded_corner_2dp_primary"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_toRightOf="@id/pad_toolbar"
@@ -654,5 +654,42 @@
             android:layout_height="wrap_content"
             android:textColor="@color/text_primary_light"
             android:text="50"/>
+    </LinearLayout>
+    <LinearLayout android:id="@+id/color_popup"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:background="@drawable/rounded_corner_2dp_primary"
+        android:padding="4dp"
+        android:layout_toRightOf="@id/pad_toolbar"
+        android:layout_toEndOf="@id/pad_toolbar"
+        android:visibility="gone">
+        <ImageButton android:id="@+id/blue"
+            android:layout_width="@dimen/toolbar_icon_size"
+            android:layout_height="@dimen/toolbar_icon_size"
+            android:background="@drawable/button_blue"
+            android:onClick="ColorClick"/>
+        <ImageButton android:id="@+id/red"
+            android:layout_width="@dimen/toolbar_icon_size"
+            android:layout_height="@dimen/toolbar_icon_size"
+            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/button_red"
+            android:onClick="ColorClick"/>
+        <ImageButton android:id="@+id/green"
+            android:layout_width="@dimen/toolbar_icon_size"
+            android:layout_height="@dimen/toolbar_icon_size"
+            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/button_green"
+            android:onClick="ColorClick"/>
+        <ImageButton android:id="@+id/orange"
+            android:layout_width="@dimen/toolbar_icon_size"
+            android:layout_height="@dimen/toolbar_icon_size"
+            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/button_orange"
+            android:onClick="ColorClick"/>
     </LinearLayout>
 </RelativeLayout>
