Added remove ads product, quantized stopping of samples, and removed rewind/reset recording in favor of auto-reset after every stop

--- a/app/src/main/res/layout/activity_launch_pad.xml
+++ b/app/src/main/res/layout/activity_launch_pad.xml
@@ -692,4 +692,9 @@
             android:background="@drawable/button_orange"
             android:onClick="ColorClick"/>
     </LinearLayout>
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinator_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
