--- a/app/src/main/res/layout/counter_bar.xml
+++ b/app/src/main/res/layout/counter_bar.xml
@@ -2,18 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:gravity="center_vertical"
     android:background="@color/primary">
-    <TextView android:id="@+id/bpm_view"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/text_primary_light"
-        android:text="120 BPM"/>
+        android:orientation="vertical">
+        <TextView android:id="@+id/time_sig_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_primary_light"
+            android:text="4 / 4"/>
+        <TextView android:id="@+id/bpm_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_primary_light"
+            android:text="120 BPM"/>
+    </LinearLayout>
     <TextView android:id="@+id/counter_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/text_primary_light"
         android:text="00 : 00"/>
 </LinearLayout>
