--- a/app/src/main/res/menu/menu_launch_pad_activity.xml
+++ b/app/src/main/res/menu/menu_launch_pad_activity.xml
@@ -9,10 +9,12 @@
     <item android:id="@+id/action_rewind"
         android:title="@string/action_rewind"
         android:icon="@drawable/ic_action_av_fast_rewind"
+        android:visible="false"
         app:showAsAction="always"/>
     <item android:id="@+id/action_fast_forward"
         android:title="@string/action_fast_forward"
         android:icon="@drawable/ic_action_av_fast_forward"
+        android:visible="false"
         app:showAsAction="ifRoom"/>
     <item android:id="@+id/action_edit_mode"
         android:title="@string/action_edit_mode"
@@ -24,5 +26,6 @@
         app:showAsAction="never" />
     <item android:id="@+id/action_reset"
         android:title="@string/action_reset"
+        android:visible="false"
         app:showAsAction="never"/>
 </menu>
